# Music2.0

./: .gitignore  README.md  alembic.ini  pyproject.toml  run
.github/workflows/: blocking-issues.yml
commands/: discogs.py  slash-commander.py
commands/xkcd/: ingest.py  query.py  summarize.py  xkcd.json
db/: music.dbml  music_pg.sql
discogs/: discogs.py
murph/: jukebox.py  murph.py  murph.service
music2/: app.py
music2/alembic/: env.py
music2/alembic/versions/: 20231001034043_4df963048087_initial.py
music2/api/system/: routes.py
music2/common/: db.py  exceptions.py
music2/common/models/: __init__.py  artist.py  base.py  bracket.py  genre.py  link.py  match.py  notification.py  participant.py  project.py  round.py  seed.py  song.py  submission.py
music2/models/: __init__.py  artist.py  base.py  bracket.py  genre.py  link.py  match.py  notification.py  participant.py  project.py  round.py  seed.py  song.py  submission.py
tests/: conftest.py
tests/api/system/: test_routes.py
tests/common/: test_db.py
tests/fixture_tests/: test_db_session.py
