[tool.poetry]
name = "music2"
version = "0.1.0"
description = "The second generation of the #Music project"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.20"
gunicorn = "^21.2.0"
flask = "^2.3.3"
pytest-flask = "^1.2.0"
isort = "^5.12.0"
discord = "^2.3.2"
python-decouple = "^3.8"
cobe = "^3.0.1"
lyricsgenius = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
