[tool.poetry]
name = "music2"
version = "0.1.0"
description = "The second generation of the #Music project"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
flask = "^2.3.3"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.7"
python = "^3.11"
SQLAlchemy = "^2.0.20"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.1"
pytest-flask = "^1.2.0"
pytest-mock = "^3.11.1"

[tool.pytest.ini_options]
addopts = ["-ra", "-v"]
testpaths = ["tests"]
markers = [
  "integration: Integration test, often requiring DB access and often slower",
  "db: Requires DB access",
]
filterwarnings = ["ignore::DeprecationWarning"]
xfail_strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
